refactor(user-input-validator): 상위호환의 메서드 사용함으로써 유연성 부여